force-app/main/default/objects/SFDC_Banking_Relationship__c/SFDC_Banking_Relationship__c.object-meta.xml
<CustomObject>
    <description>Relationships that Investment Banks have with potential Target Companies.</description>
    <label>Banking Relationship</label>
    <nameField>
        <label>Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banking Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>