force-app/main/default/objects/SFDC_Banking_Relationship__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>SFDC_Target_Company__c</referenceTo>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>