force-app/main/default/objects/SFDC_Banking_Relationship__c/fields/Date_Introduced__c.field-meta.xml
<CustomField>
    <fullName>Date_Introduced__c</fullName>
    <description>Date that the opportunity was first introduced.</description>
    <label>Date Introduced</label>
    <type>Date</type>
</CustomField>