force-app/main/default/objects/SFDC_Banking_Relationship__c/fields/Investment_Bank__c.field-meta.xml
<CustomField>
    <fullName>Investment_Bank__c</fullName>
    <label>Investment Bank</label>
    <referenceTo>SFDC_Investment_Bank__c</referenceTo>
    <relationshipName>Engagements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>