force-app/main/default/objects/SFDC_Banking_Relationship__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary contact at the Investment Bank.</description>
    <label>Primary Contact</label>
    <referenceTo>SFDC_Investment_Banking_Contact__c</referenceTo>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>