force-app/main/default/objects/SFDC_Banking_Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <description>Denotes the type of relationship the bank has with either Target Company or your organization.</description>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Introducing Idea</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Placement Agent</fullName>
            </value>
            <value>
                <fullName>Representing Our Company</fullName>
            </value>
            <value>
                <fullName>Representing Target</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>